// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InfoSection > empty resume produces no text content 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      />
    </section>
  </div>
</body>
`;

exports[`InfoSection > everything else 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24a104,104,0,0,0,0,208c21.51,0,44.1-6.48,60.43-17.33a8,8,0,0,0-8.86-13.33C166,210.38,146.21,216,128,216a88,88,0,1,1,88-88c0,26.45-10.88,32-20,32s-20-5.55-20-32V88a8,8,0,0,0-16,0v4.26a48,48,0,1,0,5.93,65.1c6,12,16.35,18.64,30.07,18.64,22.54,0,36-17.94,36-48A104.11,104.11,0,0,0,128,24Zm0,136a32,32,0,1,1,32-32A32,32,0,0,1,128,160Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          <a
            class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline"
            href="mailto:foo@example.com"
          >
            foo@example.com
          </a>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M176,16H80A24,24,0,0,0,56,40V216a24,24,0,0,0,24,24h96a24,24,0,0,0,24-24V40A24,24,0,0,0,176,16ZM80,32h96a8,8,0,0,1,8,8v8H72V40A8,8,0,0,1,80,32Zm96,192H80a8,8,0,0,1-8-8v-8H184v8A8,8,0,0,1,176,224Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          <a
            class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline"
            href="tel:867-5309"
          >
            867-5309
          </a>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M216,48H40A16,16,0,0,0,24,64V224a15.84,15.84,0,0,0,9.25,14.5A16.05,16.05,0,0,0,40,240a15.89,15.89,0,0,0,10.25-3.78l.09-.07L83,208H216a16,16,0,0,0,16-16V64A16,16,0,0,0,216,48ZM160,152H96a8,8,0,0,1,0-16h64a8,8,0,0,1,0,16Zm0-32H96a8,8,0,0,1,0-16h64a8,8,0,0,1,0,16Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          This, That
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M240,88.23a54.43,54.43,0,0,1-16,37L189.25,160a54.27,54.27,0,0,1-38.63,16h-.05A54.63,54.63,0,0,1,96,119.84a8,8,0,0,1,16,.45A38.62,38.62,0,0,0,150.58,160h0a38.39,38.39,0,0,0,27.31-11.31l34.75-34.75a38.63,38.63,0,0,0-54.63-54.63l-11,11A8,8,0,0,1,135.7,59l11-11A54.65,54.65,0,0,1,224,48,54.86,54.86,0,0,1,240,88.23ZM109,185.66l-11,11A38.41,38.41,0,0,1,70.6,208h0a38.63,38.63,0,0,1-27.29-65.94L78,107.31A38.63,38.63,0,0,1,144,135.71a8,8,0,0,0,16,.45A54.86,54.86,0,0,0,144,96a54.65,54.65,0,0,0-77.27,0L32,130.75A54.62,54.62,0,0,0,70.56,224h0a54.28,54.28,0,0,0,38.64-16l11-11A8,8,0,0,0,109,185.66Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          <div>
            <a
              class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline"
              href="http://example.com"
            >
              Example
            </a>
            <div
              class="text-sm text-zinc-300 hidden print:block"
            >
              http://example.com
            </div>
          </div>
          <a
            class="text-sky-400 underline decoration-sky-800 hover:decoration-sky-400 print:text-black print:no-underline print:hidden"
            href="/resume.pdf"
          >
            PDF Resume
          </a>
          <br />
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`InfoSection > location > displays location 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,16a88.1,88.1,0,0,0-88,88c0,75.3,80,132.17,83.41,134.55a8,8,0,0,0,9.18,0C136,236.17,216,179.3,216,104A88.1,88.1,0,0,0,128,16Zm0,56a32,32,0,1,1-32,32A32,32,0,0,1,128,72Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Foo, Bar
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`InfoSection > location > no location precludes rendering of willing 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      />
    </section>
  </div>
</body>
`;

exports[`InfoSection > location > unwilling 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,16a88.1,88.1,0,0,0-88,88c0,75.3,80,132.17,83.41,134.55a8,8,0,0,0,9.18,0C136,236.17,216,179.3,216,104A88.1,88.1,0,0,0,128,16Zm0,56a32,32,0,1,1-32,32A32,32,0,0,1,128,72Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Foo, Bar
          <div
            class="text-sm text-zinc-300"
          >
            Not available to relocate
          </div>
          <div
            class="text-sm text-zinc-300"
          >
            Not willing to travel
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`InfoSection > location > willing 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,16a88.1,88.1,0,0,0-88,88c0,75.3,80,132.17,83.41,134.55a8,8,0,0,0,9.18,0C136,236.17,216,179.3,216,104A88.1,88.1,0,0,0,128,16Zm0,56a32,32,0,1,1-32,32A32,32,0,0,1,128,72Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Foo, Bar
          <div
            class="text-sm text-zinc-300"
          >
            Willing to relocate
          </div>
          <div
            class="text-sm text-zinc-300"
          >
            Willing to travel
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
